several upgrades to idler, identity, and statics * statics included * uuid now stored numeric and * fixed config issue * config now human readable * idler now has basic load monitoring (in future: use cape.dev.idler for more)

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -24,3 +24,9 @@ Super Light Blue    #589CC3
 
 #rpc_log {
 }
+
+#tabs .tabs-spacer { float: left; height: 200px; }
+.tabs-bottom .ui-tabs-nav { clear: left; padding: 0 .2em .2em .2em; }
+.tabs-bottom .ui-tabs-nav li { top: auto; bottom: 0; margin: 0 .2em 1px 0; border-bot
+.tabs-bottom .ui-tabs-nav li.ui-tabs-active { margin-top: -1px; padding-top: 1px; }
+
